2009-03-28  Sven Neumann  <sven@gimp.org>

	Bug 577024 – help-browser plugin crashes when used with webkit 1.1.3

	* plug-ins/help-browser/help-browser.c (run): call g_thread_init().
	Seems to be needed with newer versions of webkit.

2009-03-28  Michael Natterer  <mitch@gimp.org>

	Bug 566575 – Warning when creating sample point and releasing Ctrl
	key too late

	* app/display/gimpdisplayshell-callbacks.c
	(gimp_display_shell_ruler_button_press): call
	gimp_display_shell_update_focus() after changing the tool so the
	new tool has the right state.

2009-03-28  Michael Natterer  <mitch@gimp.org>

	Bug 555025 – Action GEGL box widgets weirdness

	Must not set GDK_HINT_MIN_SIZE if we don't actually set a minimum
	size, or the window will be shrinkable to zero and it won't
	expand automatically when its contents' requisition grows.

	* app/widgets/gimpdialogfactory.[ch]: add hackish API
	gimp_dialog_factory_set,get_has_min_size() because GTK+ itself
	has no API for querying a window's GdkWindowHints.

	(gimp_dialog_factory_set_user_pos): set GDK_HINT_MIN_SIZE only if
	the window was being marked as having a minimum size using above
	new API.

	* app/widgets/gimptoolbox.c (gimp_toolbox_set_geometry)
	* app/display/gimpdisplayshell.c (gimp_display_shell_style_set):
	call gimp_dialog_factory_set_has_min_size (window, TRUE).

2009-03-27  Sven Neumann  <sven@gimp.org>

	Bug 576909 – "_Paste" and "_Paste as" have the same mnemonic

	* app/actions/edit-actions.c: resolved colliding mnemonics.

2009-03-23  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpscalebutton.c: use GtkScaleButton's accessors.

2009-03-23  Sven Neumann  <sven@gimp.org>

	Dropped support for the GnomeVFS file-uri backend. Recent GNOME
	releases use GIO/GVfs and libgnomeui will also go away soon.

	* INSTALL 
	* configure.in: removed checks for libgnomeui and libgnome-keyring.

	* plug-ins/file-uri/Makefile.am
	* plug-ins/file-uri/uri-backend-gnomevfs.c: removed.
