@@ -2002,90 +2002,6 @@ end_function
 begin_function
 specifier|static
 name|void
-DECL|function|gimp_display_shell_image_size_starts_to_fit (GimpDisplayShell * shell,gint previous_width,gint previous_height,gint new_width,gint new_height,gboolean * horizontally,gboolean * vertically)
-name|gimp_display_shell_image_size_starts_to_fit
-parameter_list|(
-name|GimpDisplayShell
-modifier|*
-name|shell
-parameter_list|,
-name|gint
-name|previous_width
-parameter_list|,
-name|gint
-name|previous_height
-parameter_list|,
-name|gint
-name|new_width
-parameter_list|,
-name|gint
-name|new_height
-parameter_list|,
-name|gboolean
-modifier|*
-name|horizontally
-parameter_list|,
-name|gboolean
-modifier|*
-name|vertically
-parameter_list|)
-block|{
-operator|*
-name|horizontally
-operator|=
-name|SCALEX
-argument_list|(
-name|shell
-argument_list|,
-name|previous_width
-argument_list|)
-operator|>
-name|shell
-operator|->
-name|disp_width
-operator|&&
-name|SCALEX
-argument_list|(
-name|shell
-argument_list|,
-name|new_width
-argument_list|)
-operator|<=
-name|shell
-operator|->
-name|disp_width
-expr_stmt|;
-operator|*
-name|vertically
-operator|=
-name|SCALEY
-argument_list|(
-name|shell
-argument_list|,
-name|previous_height
-argument_list|)
-operator|>
-name|shell
-operator|->
-name|disp_height
-operator|&&
-name|SCALEY
-argument_list|(
-name|shell
-argument_list|,
-name|new_height
-argument_list|)
-operator|<=
-name|shell
-operator|->
-name|disp_height
-expr_stmt|;
-block|}
-end_function
-
-begin_function
-specifier|static
-name|void
 DECL|function|gimp_display_shell_size_changed_detailed_handler (GimpImage * image,gint previous_origin_x,gint previous_origin_y,gint previous_width,gint previous_height,GimpDisplayShell * shell)
 name|gimp_display_shell_size_changed_detailed_handler
 parameter_list|(
@@ -2135,11 +2051,31 @@ block|{
 name|GimpImage
 modifier|*
 name|image
+init|=
+name|GIMP_IMAGE
+argument_list|(
+name|shell
+operator|->
+name|display
+operator|->
+name|image
+argument_list|)
 decl_stmt|;
-name|gboolean
-name|horizontally
-decl_stmt|,
-name|vertically
+name|gint
+name|new_width
+init|=
+name|gimp_image_get_width
+argument_list|(
+name|image
+argument_list|)
+decl_stmt|;
+name|gint
+name|new_height
+init|=
+name|gimp_image_get_height
+argument_list|(
+name|image
+argument_list|)
 decl_stmt|;
 name|gint
 name|scaled_previous_origin_x
@@ -2161,41 +2097,63 @@ argument_list|,
 name|previous_origin_y
 argument_list|)
 decl_stmt|;
-name|image
+name|gboolean
+name|horizontally
+decl_stmt|;
+name|gboolean
+name|vertically
+decl_stmt|;
+name|horizontally
 operator|=
-name|GIMP_IMAGE
-argument_list|(
-name|shell
-operator|->
-name|display
-operator|->
-name|image
-argument_list|)
-expr_stmt|;
-name|gimp_display_shell_image_size_starts_to_fit
+operator|(
+name|SCALEX
 argument_list|(
 name|shell
 argument_list|,
 name|previous_width
+argument_list|)
+operator|>
+name|shell
+operator|->
+name|disp_width
+operator|&&
+name|SCALEX
+argument_list|(
+name|shell
+argument_list|,
+name|new_width
+argument_list|)
+operator|<=
+name|shell
+operator|->
+name|disp_width
+operator|)
+expr_stmt|;
+name|vertically
+operator|=
+operator|(
+name|SCALEY
+argument_list|(
+name|shell
 argument_list|,
 name|previous_height
-argument_list|,
-name|gimp_image_get_width
+argument_list|)
+operator|>
+name|shell
+operator|->
+name|disp_height
+operator|&&
+name|SCALEY
 argument_list|(
-name|image
-argument_list|)
+name|shell
 argument_list|,
-name|gimp_image_get_height
-argument_list|(
-name|image
+name|new_height
 argument_list|)
-argument_list|,
-operator|&
-name|horizontally
-argument_list|,
-operator|&
-name|vertically
-argument_list|)
+operator|<=
+name|shell
+operator|->
+name|disp_height
+operator|)
 expr_stmt|;
 name|gimp_display_shell_scroll_set_offset
 argument_list|(
